[package]
name = "tomsg-matrix"
version = "0.1.0"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
futures = "0.3.4"
futures-util = "0.3.4"
tokio = { version = "0.2.22", features = [ "full" ] }

once_cell = "1.4.0"

#tomsg-rs = { git = "https://github.com/lieuwex/tomsg-rs" }
tomsg-rs = { path = "../tomsg-rs" }
#tomsg-rs = "=0.2.0"

ruma = { git = "https://github.com/ruma/ruma", rev = "219cea9c1e45f1507c32ddf2c39cc9e3c8914c96", features = [ "client-api", "rand" ] }
ruma-client = { git = "https://github.com/ruma/ruma", rev = "219cea9c1e45f1507c32ddf2c39cc9e3c8914c96" }

#matrix-appservice-rs = { git = "https://github.com/lieuwex/matrix-appservice-rs", rev = "9a87f0bccfe47579ac5ccdeac53c86bfd4af3034" }
matrix-appservice-rs = { path = "../matrix-appservice-rs", features = [ "convert" ] }

serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.8"

warp = "0.2"
http = "0.2.1"

rusqlite = "0.23.1"

rand = "0.7.3"

shrinkwraprs = "0.3.0"

html-escape = "0.2.6"

regex = "0.1"

hyper = "0.13"
bytes = "0.5"
